force-app/main/default/objects/DC_Note_Line_Item__c/DC_Note_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Dr/Cr Note Line Item</label>
    <nameField>
        <displayFormat>DCLI-{00000}</displayFormat>
        <label>DC Note line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dr/Cr Note Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>