force-app/main/default/objects/DC_Note_Line_Item__c/fields/Doc_No__c.field-meta.xml
<CustomField>
    <fullName>Doc_No__c</fullName>
    <label>Doc No.</label>
    <referenceTo>DC_Note__c</referenceTo>
    <relationshipName>DCline_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>