force-app/main/default/objects/DC_Note_Line_Item__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part Number</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipName>DCline_Items</relationshipName>
    <type>Lookup</type>
</CustomField>