force-app/main/default/objects/DC_Note_Line_Item__c/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <label>Specification</label>
    <type>TextArea</type>
</CustomField>